集群创建后，将8001和80服务注册到集群中

--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -18,6 +18,11 @@
 
 
     <dependencies>
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>atguigu.com</groupId>
             <artifactId>cloud-api-commons</artifactId>
