--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 7001
+  port: 7002
 eureka:
   instance:
-    hostname: eureka7001.com #服务端实例名称
+    hostname: eureka7002.com
   client:
     register-with-eureka: false #表示不向注册中心注册自己
     fetch-registry: false #表示自己就是注册中心，维护服务实例的，不用检索服务
     service-url:
-      #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
-      defaultZone: http://eureka7002.com:7002/eureka/
+      #集群建立时 互相注册服务地址
+      defaultZone: http://eureka7001.com:7001/eureka/
