--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -16,3 +16,10 @@ mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true #单节点无所谓，集群必须要设置true 才能配合用ribbon 负载均衡
+    service-url:
+      #与Eureka Server交互的地址
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
